<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".partners.PartnersFragment">

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_marginXX"
            android:layout_marginTop="@dimen/activity_vertical_marginXX"
            android:layout_marginEnd="@dimen/activity_horizontal_marginXX"
            android:layout_marginBottom="@dimen/activity_vertical_marginXX"
            android:gravity="center"
            android:text="@string/add_partner_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_marginXX"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/partner_name"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/nameEditText"
            app:layout_constraintTop_toBottomOf="@+id/info" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_marginXX"
            android:hint="@string/partner_name_hint"
            android:imeOptions="actionNext|flagNoEnterAction"
            android:inputType="text|textAutoCorrect|textCapSentences"
            android:maxLines="1"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info" />

        <TextView
            android:id="@+id/description"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/partner_description"
            app:layout_constraintRight_toLeftOf="@+id/descriptionEditText"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/partner_description_hint"
            android:imeOptions="actionNext|flagNoEnterAction"
            android:inputType="text|textAutoCorrect|textCapSentences"
            android:maxLines="1"
            app:layout_constraintLeft_toRightOf="@+id/description"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

        <Button
            android:id="@+id/submit"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:onClick="buttonsClickHandler"
            android:text="@string/submit"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
